mw-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
